--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.brylex</groupId>
     <artifactId>path-parser</artifactId>
-    <version>2-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>path-parser</name>
@@ -88,7 +90,6 @@
         <connection>scm:git:git://github.com/runepeter/path-parser.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/runepeter/path-parser.git</developerConnection>
         <url>https://github.com/runepeter/path-parser</url>
-      <tag>HEAD</tag>
-  </scm>
+    </scm>
 
 </project>
