--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>org.brylex</groupId>
   <artifactId>path-parser</artifactId>
-  <version>1</version>
+  <version>2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>path-parser</name>
